[RAG]: Implemented swagger with the addition of metrics and generated models.
